# 100CommitsStrategyGame

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
resources/: tree.blend  tree.glb
resources/shaders/: instancing.fs  instancing.vs  terrain.frag  terrain.vs
resources/tree/: tree.blend  tree.blend1  tree.gltf
src/: CMakeLists.txt  assets_loader.cpp  assets_loader.hpp  camera.cpp  camera.hpp  common.hpp  common_components.hpp  drawing.cpp  drawing.hpp  error.hpp  homeless_functions.cpp  homeless_functions.hpp  main.cpp  minion.cpp  minion.hpp  models.hpp  systems.cpp  systems.hpp  tasks.cpp  tasks.hpp  terrain.cpp  terrain.hpp
